# BioData

./: .gitignore  .travis.yml  HMM_tbl_parse.py  LICENSE  README.md  pyproject.toml  tox.ini
GeneralAssembly_FinalProject/: README.md  ftpgrab_refseq.py  ftpgrab_refseqbacteria.py  multiGenomeARSC_V2.py  precalculated_avgARSC.txt  visualizing_genomeavg.py
Genome_Completeness_Duplication/: ConservedSingleCopyGenes.py  Estimate_Percent_Duplication.py  HMM_percent_complete.py  HMM_tbl_parse.py  README.md
KEGGDecoder/: Decode_and_Expand.py  KEGG-decoder.py  KEGG-expander.py  KEGG_clustering.py  KEGG_decoder.py  KEGG_expander.py  KOALA_definitions.txt  MakeTanglegram.py  Pfam_definitions.txt  Plotly_viz.py  README.md  __init__.py  arg_parse.py  combined_caller.py  fasta_hash.py  seq_map.py
KEGGDecoder/Amphibactin/: ABO2092homolog_ref.faa  ABO2093homolog_ref.faa  amphibactin2092_sfam_match.tblout  amphibactin2093_sfam_match.tblout
KEGGDecoder/DMSPLyase/: 25993.hmm  274874.hmm  94923.hmm  Pelagibacter_ref_dddK.faa  dmdA_37326.hmm
KEGGDecoder/DMSPSynthase/: 4254.hmm  curson_dmsp_synthase.faa  img_dmsp_synthase_dsyB.faa  ncbi_dmsp_synthase_dsyB.faa
KEGGDecoder/DesferrioxamineBiosynthesis/: Streptomycetes_ref_pathway.faa  ferrioxamine_sfam_match.tblout
KEGGDecoder/HMM_Models/: 14591.hmm  4254.hmm  Ammonium_transp.hmm  AnfG_VnfG.hmm  Bac_rhodopsin.hmm  CbtB.hmm  Copper_HMA.hmm  (+24 more)
Various_Tools/: FASTA_subsample.py  FullGenbank_to_MultipleFASTA.py  MetaRNA_to_FastQ.py  README.md  example.gbk
tests/: NORP_subset.txt  PET-function-test-ghostkoalaoutput.txt  test_decoder.py
(+17 files in other folders)
