[build-system]
requires = ["flit >= 1.1"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "KEGGDecoder"
author = "Benjamin Tully"
author-email = "tully.bj@gmail.com"
home-page = "https://github.com/bjtully/BioData/KEGGDecoder"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "matplotlib==3.0.3",
    "seaborn==0.9.0",
    "pandas==0.25.2",
    "numpy==1.17.3",
    "plotly==4.2.1",
    "tanglegram==0.1.0",
    "biopython==1.74",
    "scipy==1.3.1",
    "plumbum==1.6.8"
]

[tool.flit.scripts]
KEGG-decoder = "KEGGDecoder.KEGG_decoder:main"
KEGG-decoder-expander = "KEGGDecoder.combined_caller:run"
